--- a/app/views/custom/passwordChange.scala.html
+++ b/app/views/custom/passwordChange.scala.html
@@ -19,7 +19,7 @@
                 }
 
                 @if( request.flash.get("success").isDefined ) {
-                    <div class="alert alert-info animated fadeIn">
+                    <div class="alert alert-success animated fadeIn">
                         @request.flash.get("success").get
                     </div>
 
