--- a/app/views/custom/login.scala.html
+++ b/app/views/custom/login.scala.html
@@ -21,7 +21,7 @@
                 }
 
                 @request.flash.get("success").map { msg =>
-                    <div class="alert alert-info animated fadeIn">
+                    <div class="alert alert-success animated fadeIn">
                         @msg
                     </div>
                 }
