--- a/app/views/helper/inputTextHorizontal.scala.html
+++ b/app/views/helper/inputTextHorizontal.scala.html
@@ -1,6 +1,7 @@
 @(field: Field, args: (Symbol,Any)*)(implicit handler: helper.FieldConstructor, lang: play.api.i18n.Lang)
     @label = @{ args.toMap.get('_label).map(_.toString).getOrElse("") }
     @labelClass = @{ args.toMap.get('_labelClass).map(_.toString).getOrElse("col-sm-3") }
+    @divClass = @{ args.toMap.get('_divClass).map(_.toString).getOrElse("") }
     @rows = @{ args.toMap.get('rows).map(_.toString).getOrElse("1") }
     @readonly = @{ args.toMap.get('readonly).map(_.toString).getOrElse("") }
     @customType = @{ args.toMap.get('type).map(_.toString).getOrElse("text") }
@@ -9,7 +10,7 @@
 @if(customType.equals("textarea")) {
     <div class="form-group @if(field.hasErrors) {has-error}">
         <label class="@labelClass control-label" for="@field.id" >@label</label>
-        <div class="col-sm-9">
+        <div class="@divClass">
             <textarea rows="@rows"
             class="form-control"
             id="@field.id"
@@ -21,7 +22,7 @@
 } else {
     <div class="form-group @if(field.hasErrors) {has-error}">
         <label class="@labelClass control-label" for="@field.id" >@label</label>
-        <div class="col-sm-9">
+        <div class="@divClass">
             <input type="@customType"
             class="form-control"
             id="@field.id"
