--- a/app/views/host/hostMain.scala.html
+++ b/app/views/host/hostMain.scala.html
@@ -1,5 +1,5 @@
 @()(content: Html)
 
-<button class="btn btn-primary btn-host-popover collapsed" data-toggle="collapse" data-target=".host-popover"><span class="glyphicon glyphicon-chevron-down"></span><span class="glyphicon glyphicon-chevron-up"></span>&nbsp;@Messages("mails.hosting.send.request.host")</button>
-<div class="row"><div class="col-xs-12 host-popover collapse">@content</div></div>
+<button class="btn btn-request collapsed" data-toggle="collapse" data-target=".request-popover">@Messages("mails.hosting.send.request.host")</button>
+<div class="row"><div class="col-xs-12 request-popover collapse">@content</div></div>
 <div class="clearfix"></div>
