--- a/app/views/host/replyGuest.scala.html
+++ b/app/views/host/replyGuest.scala.html
@@ -2,17 +2,16 @@
 @import helper.twitterBootstrap._
 
 
-@views.html.host.hostReplyMain(owner, hostReplyForm, msgId, message.read) {
-    <div class="well well-hdc">
+@views.html.host.messageMain(owner, message, msgId) {
         @utils.Helpers.getUserFromRequest match {
             case None => {}
             case Some(currentUser) => {
-                <div class="grade hdc-grade">
+                <div class="row">
+                    <div class="col-xs-12">
                     @helper.form(action = routes.MessagesController.replyToGuest()) {
-                        <fieldset>
+                            @if(hostReplyForm.get.messageType.getOrElse("").equalsIgnoreCase("REQUEST")){
 
-                            @if(hostReplyForm.get.messageType.getOrElse("").equalsIgnoreCase("REQUEST")) {
-                                @if(message.getResponses != null) {
+                                @*if(message.getResponses != null) {
                                     <table>
                                         <tbody>
                                             @for(msg <- message.getResponses) {
@@ -28,63 +27,62 @@
                                         </tbody>
                                     </table>
                                     <br/>
-                                }
-                                <table>
-                                    <tbody>
-                                        <tr>
-                                            <td>
-                                                <strong>@Messages("mails.inbox.header.date") : </strong>
-                                            </td>
-                                            <td>
-                                                @hostReplyForm.get.date.format("yyyy-MM-dd") @hostReplyForm.get.time.format("HH:mm")
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <strong>@Messages("mails.inbox.header.guest.number") : </strong>
-                                            </td>
-                                            <td>
-                                                @hostReplyForm.get.numberOfGuests
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <strong>@Messages("mails.inbox.header.phone") : </strong>
-                                            </td>
-                                            <td>
-                                                @hostReplyForm.get.phone
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>
-                                                <strong>@Messages("mails.inbox.header.message") : </strong>
-                                            </td>
-                                            <td>
-                                                @hostReplyForm.get.request
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                                <br/>
-                                <div class="col-xs-12">
-                                    @helper.inputTextHorizontal(hostReplyForm("firstName"), 'readonly -> "readonly", '_label -> "Till", 'class -> "col-sm-10")
-                                    @helper.inputTextHorizontal(hostReplyForm("response"), 'type -> "textarea", 'rows -> 6, '_label -> "Svar", 'required -> "required", 'class -> "col-sm-10")
+                                }*@
+                                <div class="col-xs-12 col-sm-6">
+                                    <table class="table request-table">
+                                        <thead>
+                                            <tr><th>@Messages("mails.inbox.header.message"):</th></tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>@hostReplyForm.get.request</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
-
-
-                                <div class="form-actions">
-                                    <input type="submit" class="btn btn-primary pull-right" value="@Messages("mails.hosting.request.reply")">
+                                <div class="col-xs-12 col-sm-6">
+                                    <table class="table request-table">
+                                        <thead>
+                                            <tr><th colspan="2">@Messages("mails.inbox.request")</th></tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td class="req-header"><strong>@Messages("mails.inbox.header.date"):</strong></td>
+                                                <td>@hostReplyForm.get.date.format("yyyy-MM-dd") @hostReplyForm.get.time.format("HH:mm")</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="req-header"><strong>@Messages("mails.inbox.header.guest.number"):</strong></td>
+                                                <td>@hostReplyForm.get.numberOfGuests</td>
+                                            </tr>
+                                            <tr>
+                                                <td class="req-header"><strong>@Messages("mails.inbox.header.phone"):</strong></td>
+                                                <td>@hostReplyForm.get.phone</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                             }
 
                             @if(hostReplyForm.get.messageType.getOrElse("").equalsIgnoreCase("REPLY")){
-                                @if(message.getResponses != null) {
+                                <div class="col-xs-12">
+                                    <table class="table request-table">
+                                        <thead>
+                                            <tr><th>@Messages("mails.inbox.header.message"):</th></tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>@hostReplyForm.get.request.getOrElse("")</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+@*                                @if(message.getResponses != null) {
                                     <table>
                                         <tbody>
                                             @for(msg <- message.getResponses) {
                                                 <tr>
                                                     <td>
-                                                        <strong>@Messages("mails.inbox.header.message") : </strong>
+                                                        <strong>@Messages("mails.inbox.header.message"):</strong>
                                                     </td>
                                                     <td>
                                                         @msg.request
@@ -92,17 +90,24 @@
                                                 </tr>
                                             }
                                             <tr>
-                                                <td>
-                                                    <strong>@Messages("mails.inbox.header.answer") : </strong>
-                                                </td>
-                                                <td>
-                                                    @hostReplyForm.get.request.getOrElse("")
-                                                </td>
+                                                <td><strong>@Messages("mails.inbox.header.answer"):</strong></td>
+                                                <td>@hostReplyForm.get.request.getOrElse("")</td>
                                             </tr>
                                         </tbody>
                                     </table>
                                 }
+                                *@
                             }
+
+                            <hr class="hr-orange margin-top">
+                            <div class="col-xs-12 margin-top">
+                                @helper.inputTextHorizontal(hostReplyForm("firstName"), 'readonly -> "readonly", '_label -> Messages("mails.inbox.reply.header.to"))
+                                @helper.inputTextHorizontal(hostReplyForm("response"), 'type -> "textarea", 'rows -> 6, '_label -> Messages("mails.inbox.reply.header.message"), 'required -> "required")
+                                <div class="col-xs-12">
+                                    <input type="submit" class="btn btn-primary pull-right" value="@Messages("mails.inbox.reply.button", hostReplyForm.get.firstName)">
+                                </div>
+                            </div>
+
                             @helper.inputHidden(hostReplyForm("firstName"))
                             @helper.inputHidden(hostReplyForm("lastName"))
                             @helper.inputHidden(hostReplyForm("messageType"))
@@ -115,13 +120,9 @@
                             @helper.inputHidden(hostReplyForm("hostId"))
                             @helper.inputHidden(hostReplyForm("createdDate"))
                             @helper.inputHidden(hostReplyForm("messageId"))
-                        </fieldset>
-                        <br/>
-                        <br/>
-
                     }
                 </div>
+            </div>
             }
         }
-    </div>
 }
