profileLinkname is changed to firstname, point 2 in list to be updated

--- a/app/views/profile/profileHeader.scala.html
+++ b/app/views/profile/profileHeader.scala.html
@@ -1,13 +1,13 @@
-@(header: String, avatarUrl: String = "", showLinkBack: Boolean = false)
+@(header: String, firstName: String, avatarUrl: String = "", showLinkBack: Boolean = false)
 <div class="row">
     <div class="col-xs-12 col-md-12 big-margin-top">
         <div class="host-header">
             <header>
                 @if(showLinkBack){
                 <a href="@routes.UserProfileController.viewProfileByName(header).url">
-                    <h2 class="host-header-link hdc-tooltip" data-toggle="tooltip" data-placement="right" data-original-title="@Messages("host-header.tooltip.text", header)"><span class="glyphicon glyphicon-chevron-left glyphicon-lowered"></span>&nbsp;@header</h2>
+                    <h2 class="host-header-link hdc-tooltip" data-toggle="tooltip" data-placement="right" data-original-title="@Messages("host-header.tooltip.text", firstName)"><span class="glyphicon glyphicon-chevron-left glyphicon-lowered"></span>&nbsp;@firstName</h2>
                 }else{
-                    <h2>@header</h2>
+                    <h2>@firstName</h2>
                 }
                     @if(avatarUrl.isEmpty){
                         @shared.hostImageCircle(cssClassWrapper = "white-border drop-shadow")
