--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -109,7 +109,7 @@
         <div class="row">
             <div class="col-xs-12 col-md-9">
                 @defining(if(userProfile.getAvatarImage != null){controllers.routes.ImageController.userThumb(userProfile.getAvatarImage.getStoreId).url}else{""}){ avatarUrl =>
-                    @views.html.profile.profileHeader(userProfile.getOwner.firstName, avatarUrl, false)
+                    @views.html.profile.profileHeader(userProfile.profileLinkName, userProfile.getOwner.firstName, avatarUrl, false)
                 }
                 <div class="row">
                     <div class="col-xs-12 col-md-6 big-margin-top">
