--- a/app/views/recipe/recipe.scala.html
+++ b/app/views/recipe/recipe.scala.html
@@ -16,8 +16,12 @@
         <div class="row">
             <div class="col-xs-12 col-md-9">
                 @defining(if(recipe.getOwnerProfile.getAvatarImage != null){routes.ImageController.userThumb(recipe.getOwnerProfile.getAvatarImage.getStoreId).url}else{""}) { avatarUrl =>
-                    @views.html.profile.profileHeader(recipe.getOwnerProfile.profileLinkName, avatarUrl, true)
+                    @views.html.profile.profileHeader(recipe.getOwnerProfile.profileLinkName, recipe.getOwnerProfile.fistName, avatarUrl, true)
                 }
+
+                <!-- recipe.getOwnerProfile.fistName -->
+                <!-- recipe.getOwnerProfile.profileLinkName -->
+
                 <div class="row">
                     <div class="col-xs-12 big-margin-top">
                         @shared.flashmsg(flash)
@@ -35,7 +39,7 @@
                             </article>
                             <article>
                                 @shared.grade(inputId = "recipe-grade", initialValue = recipe.getAverageRating, size = "xs", cssClass = "hdc-grade-pull-left pull-left", disabled = true, showCaption = false, showNrOfRatings = true, nrOfRatings = recipe.getNrOfRatings)
-                                @RatingController.renderRecipeRateForm(recipe, routes.RecipePageController.viewRecipeByNameAndProfile(recipe.getOwnerProfile.profileLinkName, recipe.getLink).url)(request)
+                                @RatingController.renderRecipeRateForm(recipe, routes.RecipePageController.viewRecipeByNameAndProfile(recipe.getOwnerProfile.fistName, recipe.getLink).url)(request)
                             </article>
                         </section>
                     </div>
