--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -11,6 +11,12 @@
 @hdc-green-g: 194;
 @hdc-green-b: 181;
 
+@hdc-orange: #ef7b3e;
+@hdc-orange-r: 239;
+@hdc-orange-g: 123;
+@hdc-orange-b: 62;
+
+
 @hdc-dark-gray: #777;
 @hdc-gray: #a7a9ac;
 @hdc-semi-light-gray: #ededed;
@@ -20,8 +26,10 @@
 @hdc-red: #8E0000;
 @hdc-medium-light-green: lighten(@hdc-green, 20%);
 @hdc-light-green: lighten(@hdc-green, 39%);
-@hdc-orange: #ef7b3e;
+@hdc-dark-green: darken(@hdc-green,20%);
+
 @hdc-light-orange: lighten(@hdc-orange,20%);
+@hdc-dark-orange: darken(@hdc-orange,20%);
 
 @host-level-01-color: @hdc-green;
 @host-level-02-color: @hdc-black;
@@ -333,6 +341,11 @@ input[type="reset"]:hover
 {
   padding:20px;
 }
+.btn-no-margin
+{
+  margin:0px;
+}
+
 .btn-close {
   position: absolute;
   height: 15px;
@@ -403,6 +416,39 @@ input[type="reset"]:hover
 // Host levels / grade / rating
 .host-level-icon
 {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  width:30px;
+  height:30px;
+  border-radius: 15px;
+  border:2px solid @hdc-semi-light-gray;
+  background-color: #fff;
+}
+.host-level-icon .icon
+{
+  position: relative;
+  overflow: hidden;
+  display: block;
+  top:3px;
+  left:3px;
+  width:21px;
+  height:20px;
+  background-image:url('/assets/images/icons/green-white-house.png');
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size:41px auto;
+}
+.host-level-icon:hover {
+  background-color: @hdc-gray;
+}
+.host-level-icon:hover .icon {
+  background-position: -21px 0px;
+}
+
+/*
+.host-level-icon
+{
   overflow:visible;
   display:block;
   width:64px;
@@ -447,6 +493,8 @@ input[type="reset"]:hover
   color:@host-level-04-color;
   background-position: -192px 0px;
 }
+*/
+
 .btn-host-popover {
    margin-left:10px;
  }
@@ -782,7 +830,6 @@ input[type="reset"]:hover
 .fileinput-button {
   width:100%;
 }
-
 
 // Likes
 .btn-group-likes {
@@ -1406,28 +1453,14 @@ h3.aside-title {
 {
   clear:both;
 }
-//
-//.panel-startpage.col-md-4
-//{
-//  margin:15px 15px 0px 0px;
-//  width:31.0%; /* non-css3 fallback */
-//  width: calc( 33.33333333% - 15px ); /* css3 calculation */
-//}
-//
-//.panel-startpage.col-sm-6
-//{
-//  margin:15px 15px 0px 0px;
-//  width:62.0%; /* non-css3 fallback */
-//  width: calc( 66.6666666% - 15px ); /* css3 calculation */
-//}
-//
-//.panel-startpage.col-xs-12
-//{
-//  margin:15px 15px 0px 0px;
-//  width:93.0%; /* non-css3 fallback */
-//  width: calc( 99.9999999% - 15px ); /* css3 calculation */
-//}
+.panel-startpage .host-level-icon
+{
+  position: absolute;
+  left:5px;
+  top:5px;
+  z-index:10;
 
+}
 .panel-startpage .host-image
 {
   position: absolute;
@@ -1476,18 +1509,7 @@ h3.aside-title {
 {
   text-decoration: none;
 }
-.panel-startpage .host-level-icon
-{
-  position: absolute;
-  right:0px;
-  bottom:0px;
-  z-index:40;
-}
 .panel-startpage .hdc-grade .star-rating.rating-disabled:hover {
-  cursor: pointer;
-}
-.panel-startpage .host-level-icon:hover {
-  opacity: .9;
   cursor: pointer;
 }
 
