--- a/app/views/recipe/recipeBox.scala.html
+++ b/app/views/recipe/recipeBox.scala.html
@@ -79,10 +79,10 @@ $(document).ready(function(){
 <div class="row" id="recipeList"></div>
 <div class="row pagination-hdc">
     <div class="col-xs-6 col-sm-5">
-        <button id="resultPrev" class="btn btn-default pull-right"><span class="glyphicon glyphicon-arrow-left"></span>&nbsp;@Messages("recipe.box.button.previous")</button>
+        <button id="resultPrev" class="btn btn-default pull-right"><span class="glyphicon glyphicon-arrow-left"></span>&nbsp;@Messages("button.previous")</button>
     </div>
     <div id="resultsTotal" class="col-xs-2 hidden-xs text-center"></div>
     <div class="col-xs-6 col-sm-5">
-        <button id="resultNext" class="btn btn-default pull-left">@Messages("recipe.box.button.next") &nbsp; <span class="glyphicon glyphicon-arrow-right"></span></button>
+        <button id="resultNext" class="btn btn-default pull-left">@Messages("button.next") &nbsp; <span class="glyphicon glyphicon-arrow-right"></span></button>
     </div>
 </div>
