--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -106,11 +106,11 @@
                     <div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 form-startpage-filter animated fadeIn">
                     @helper.form(action=routes.StartPageController.index(), 'class -> "form-horizontal form-filter-startpage"){
                         <div class="form-group">
-                            @* @helper.inputText(searchForm("freeText"), '_label -> Messages("startpage.filterform.freetext")) *@
-                            @if(optionsFoodAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fTag"), optionsFoodAreas.get, '_label -> Messages("startpage.filterform.foodarea"), 'class -> "form-control") </div>}
-                            @if(optionsLocationAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fCounty"), optionsLocationAreas.get, '_label -> Messages("startpage.filterform.area"), 'class -> "form-control") </div> }
-                            @if(optionsIsHost.nonEmpty){ <div class="col-xs-12 col-sm-2"> @helper.checkbox(searchForm("fHost"), '_label -> Messages("startpage.filterform.is-host"), '_help -> "", '_showErrors -> false, 'class -> "") </div> }
-                            <div class="col-xs-12"><button class="btn btn-primary btn-block btn-no-margin" type="submit">@Messages("startpage.filterform.submit")</button></div>
+                            @* @helper.inputText(searchForm("freeText"), '_label -> Messages("filterform.freetext")) *@
+                            @if(optionsFoodAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fTag"), optionsFoodAreas.get, '_label -> Messages("filterform.foodarea"), 'class -> "form-control") </div>}
+                            @if(optionsLocationAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fCounty"), optionsLocationAreas.get, '_label -> Messages("filterform.area"), 'class -> "form-control") </div> }
+                            @if(optionsIsHost.nonEmpty){ <div class="col-xs-12 col-sm-2"> @helper.checkbox(searchForm("fHost"), '_label -> Messages("filterform.is-host"), '_help -> "", '_showErrors -> false, 'class -> "") </div> }
+                            <div class="col-xs-12"><button class="btn btn-primary btn-block btn-no-margin" type="submit">@Messages("filterform.submit")</button></div>
                         </div>
                         }
                     </div>
@@ -122,10 +122,11 @@
                     }else{
                         <div class="col-xs-12 text-center">@Html(Messages("startpage.boxes.not-found", routes.StartPageController.index().url))</div>
                     }
+                    <div class="col-xs-12 text-center"><a class="btn btn-primary btn-lg btn-big-padding btn-cta" role="button" href="@routes.BrowsePageController.index()">@Messages("startpage.main.browse.link.text")</a></div>
                 </div>
 
                 @if(utils.Helpers.getUserFromRequest.isEmpty) {
-                    <!-- CTA -->
+                <!-- CTA -->
                 <div class="row">
                     <div class="col-xs-12 big-margin-top panel-cta">
                         <div class="row">
