--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -110,7 +110,7 @@
                             @if(optionsFoodAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fTag"), optionsFoodAreas.get, '_label -> Messages("filterform.foodarea"), 'class -> "form-control") </div>}
                             @if(optionsLocationAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fCounty"), optionsLocationAreas.get, '_label -> Messages("filterform.area"), 'class -> "form-control") </div> }
                             @if(optionsIsHost.nonEmpty){ <div class="col-xs-12 col-sm-2"> @helper.checkbox(searchForm("fHost"), '_label -> Messages("filterform.is-host"), '_help -> "", '_showErrors -> false, 'class -> "") </div> }
-                            <div class="col-xs-12"><button class="btn btn-primary btn-block btn-no-margin" type="submit">@Messages("filterform.submit")</button></div>
+                            <div class="col-xs-12 col-sm-4 col-sm-offset-4"><button class="btn btn-primary btn-block btn-no-margin" type="submit">@Messages("filterform.submit")</button></div>
                         </div>
                         }
                     </div>
