--- a/app/views/shared/banner.scala.html
+++ b/app/views/shared/banner.scala.html
@@ -2,5 +2,5 @@
 
 <div class="banner">
     <div class="banner-header">@Messages("banner.header")</div>
-    <a href="@linkPath" title="@title" target="">@shared.img(imgPath.stripPrefix("/"), cssClass = "banner")</a>
+    <a href="@linkPath" title="@title" target="">@shared.img(imgPath.stripPrefix("/"), cssClass = "banner-dropshadow")</a>
 </div>
