--- a/app/views/browse/index.scala.html
+++ b/app/views/browse/index.scala.html
@@ -7,16 +7,16 @@
 
 @main(Messages("browse.title")) {
     <div class="container maincontent-container">
-        <div class="row big-margin-top">
+        <div class="row margin-top">
             <!-- Filtering push -->
-            <div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 form-startpage-filter animated fadeIn">
+            <div class="col-xs-12 col-sm-12 form-filter animated fadeIn">
             @helper.form(action=routes.BrowsePageController.index(), 'class -> "form-horizontal"){
                 <div class="form-group">
                     @* @helper.inputText(searchForm("freeText"), '_label -> Messages("filterform.freetext")) *@
                     @if(optionsFoodAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fTag"), optionsFoodAreas.get, '_label -> Messages("filterform.foodarea"), 'class -> "form-control") </div>}
-                    @if(optionsLocationAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fCounty"), optionsLocationAreas.get, '_label -> Messages("filterform.area"), 'class -> "form-control") </div> }
-                    @if(optionsIsHost.nonEmpty){ <div class="col-xs-12 col-sm-2"> @helper.checkbox(searchForm("fHost"), '_label -> Messages("filterform.is-host"), '_help -> "", '_showErrors -> false, 'class -> "") </div> }
-                    <div class="col-xs-12 col-sm-4 col-sm-offset-4"><button class="btn btn-primary btn-block btn-no-margin" type="submit">@Messages("filterform.submit")</button></div>
+                    @if(optionsLocationAreas.nonEmpty){ <div class="col-xs-12 col-sm-4"> @helper.select(searchForm("fCounty"), optionsLocationAreas.get, '_label -> Messages("filterform.area"), 'class -> "form-control") </div> }
+                    @if(optionsIsHost.nonEmpty){ <div class="col-xs-12 col-sm-1"> @helper.checkbox(searchForm("fHost"), '_label -> Messages("filterform.is-host"), '_help -> "", '_showErrors -> false, 'class -> "") </div> }
+                    <div class="col-xs-12 col-sm-2 form-actions"><button class="btn btn-primary pull-right btn-filter" type="submit">@Messages("filterform.submit")</button></div>
                 </div>
             }
             </div>
