--- a/app/views/startpage/index.scala.html
+++ b/app/views/startpage/index.scala.html
@@ -103,14 +103,14 @@
             <div class="col-xs-12 col-md-6">
                 <div class="row">
                     <!-- Filtering push -->
-                    <div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 form-startpage-filter animated fadeIn">
-                    @helper.form(action=routes.StartPageController.index(), 'class -> "form-horizontal form-filter-startpage"){
+                    <div class="col-xs-12 form-filter animated fadeIn">
+                    @helper.form(action=routes.StartPageController.index(), 'class -> "form-horizontal"){
                         <div class="form-group">
                             @* @helper.inputText(searchForm("freeText"), '_label -> Messages("filterform.freetext")) *@
                             @if(optionsFoodAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fTag"), optionsFoodAreas.get, '_label -> Messages("filterform.foodarea"), 'class -> "form-control") </div>}
                             @if(optionsLocationAreas.nonEmpty){ <div class="col-xs-12 col-sm-5"> @helper.select(searchForm("fCounty"), optionsLocationAreas.get, '_label -> Messages("filterform.area"), 'class -> "form-control") </div> }
                             @if(optionsIsHost.nonEmpty){ <div class="col-xs-12 col-sm-2"> @helper.checkbox(searchForm("fHost"), '_label -> Messages("filterform.is-host"), '_help -> "", '_showErrors -> false, 'class -> "") </div> }
-                            <div class="col-xs-12 col-sm-4 col-sm-offset-4"><button class="btn btn-primary btn-block btn-no-margin" type="submit">@Messages("filterform.submit")</button></div>
+                            <div class="col-xs-12 no-margin-top"><button class="btn btn-primary no-margin-top" type="submit">@Messages("filterform.submit")</button></div>
                         </div>
                         }
                     </div>
