--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,12 @@
-@(title: String, headerVisible: Boolean = true, footerVisible: Boolean = true, footerScripts: Html = Html(""), headerCss: Html = Html(""), footerHtml: Html = Html(""))(content: Html)(implicit request: RequestHeader)
+@(title: String,
+        headerVisible: Boolean = true,
+        footerVisible: Boolean = true,
+        footerScripts: Html = Html(""),
+        headerCss: Html = Html(""),
+        headerMeta: Html = Html(""),
+        footerHtml: Html = Html(""),
+        metaData: Option[viewmodels.MetaData] = None
+        )(content: Html)(implicit request: RequestHeader)
 <!DOCTYPE html>
 
 <html lang="@Messages("main.language")">
@@ -7,6 +15,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        @header.meta(metaData)
         <script src="@routes.Assets.at("js/libs/jquery.1.11.1.min.js")"></script>
         <link rel="stylesheet" href="@routes.Assets.at("bootstrap/css/bootstrap.min.css")" />
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.min.css")">
