--- a/app/views/profile/index.scala.html
+++ b/app/views/profile/index.scala.html
@@ -11,6 +11,7 @@
         reviewBoxesAboutMe: Option[List[models.viewmodels.ReviewBox]] = None,
         userMessages: Option[List[models.message.Message]] = None,
         tagList: Option[List[models.profile.TagWord]] = None,
+        metaData: Option[viewmodels.MetaData] = None,
         isThisMyProfile: Boolean = false)(implicit request: RequestHeader, flash: Flash)
 
     @pageScripts= {
@@ -110,7 +111,8 @@
         </script>
     }
 
-@main(Messages("profile.title"), footerScripts = pageScripts) {
+
+@main(title = Messages("profile.title", userProfile.profileLinkName), footerScripts = pageScripts, metaData = metaData) {
     <div class="container host-container">
         <div class="row">
             <div class="col-xs-12 col-md-9">
@@ -121,7 +123,7 @@
                     <div class="col-xs-12 col-md-6 big-margin-top">
                         <section>
                             <article>
-                                <!--<h1 class="page-header">@userProfile.getOwner.firstName</h1> -->
+                                <h1 class="page-header hidden">@userProfile.profileLinkName</h1>
                                 @shared.grade(inputId = "host-grade", initialValue = userProfile.getOwner.getAverageRating, size = "xs", cssClass = "hdc-grade-pull-left pull-left", disabled = true, showCaption = false, showNrOfRatings = true, nrOfRatings = userProfile.getOwner.getNrOfRatings)
                                 @if(!isThisMyProfile) {
                                     @RatingController.renderUserRateForm(userProfile.getOwner, routes.UserProfileController.viewProfileByName(userProfile.profileLinkName).url)(request)
